--- a/courses/btc204/quizz/025/it.yml
+++ b/courses/btc204/quizz/025/it.yml
@@ -5,5 +5,5 @@ wrong_answers:
   - Un metodo di validazione per le transazioni finanziarie.
   - Una tecnica di marketing per analizzare il comportamento dei clienti.
 explanation: |
-  KYC è l'acronimo di "Know Your Customer" (Conosci il Tuo Cliente). È effettivamente una procedura normativa per verificare l'identità del cliente.
+  KYC è l'acronimo di "Know Your Customer" (conosci il tuo cliente). È effettivamente una procedura normativa per verificare l'identità del cliente.
 reviewed: false
