--- a/courses/btc204/quizz/041/it.yml
+++ b/courses/btc204/quizz/041/it.yml
@@ -1,4 +1,4 @@
-question: Qual è il principale svantaggio dei Bancomat (ATM)?
+question: Qual è il principale svantaggio dei bancomat (ATM)?
 answer: Spesso le commissioni molto alte.
 wrong_answers:
   - Necessità di una connessione internet veloce.
