--- a/courses/btc204/quizz/046/it.yml
+++ b/courses/btc204/quizz/046/it.yml
@@ -1,4 +1,4 @@
-question: Quale algoritmo di scambio chiavi crittografiche è al centro del funzionamento di BIP47?
+question: Quale algoritmo di scambio delle chiavi crittografiche è al centro del funzionamento di BIP47?
 
 answer: ECDH
 
