--- a/courses/btc204/quizz/053/it.yml
+++ b/courses/btc204/quizz/053/it.yml
@@ -1,4 +1,4 @@
-question: Qual è lo scopo delle Etichette nei Pagamenti Silenziosi?
+question: Qual è lo scopo delle etichette nei Pagamenti Silenziosi?
 
 answer: Utilizzare più indirizzi statici diversi senza aumentare irragionevolmente il carico di lavoro di scansione.
 
