--- a/courses/btc204/quizz/009/it.yml
+++ b/courses/btc204/quizz/009/it.yml
@@ -5,5 +5,5 @@ wrong_answers:
   - I diritti di emissione e i premi di sicurezza.
   - I dividendi di mining e le tasse di rete.
 explanation: |
-  Quando un minatore trova un blocco valido, ha diritto a una ricompensa composta, da un lato, dal sussidio di blocco, e dall'altro, dalle commissioni delle transazioni che ha incluso nel suo blocco.
+  Quando un minatore trova un blocco valido, ha diritto a una ricompensa composta da un lato, dal sussidio di blocco, e dall'altro, dalle commissioni delle transazioni che ha incluso nel suo blocco.
 reviewed: false
