--- a/courses/btc204/quizz/027/it.yml
+++ b/courses/btc204/quizz/027/it.yml
@@ -5,5 +5,5 @@ wrong_answers:
   - L'uso di un nodo completo
   - Validazione tramite proof of work
 explanation: |
-  Le Coinjoin hanno l'effetto di interrompere la storia di una moneta, il che ti aiuta a contrastare il rischio di tracciamento associato al KYC.
+  Le transazioni coinjoin hanno l'effetto di interrompere la storia di una moneta, il che ti aiuta a contrastare il rischio di tracciamento associato al KYC.
 reviewed: false
