--- a/courses/btc204/quizz/028/it.yml
+++ b/courses/btc204/quizz/028/it.yml
@@ -1,9 +1,9 @@
-question: Cos'è l'identificazione chiave?
-answer: La capacità di associare un aspetto dell'identità di un utente con un'attività onchain.
+question: Cos'è l'identificazione della chiave?
+answer: La capacità di associare un aspetto dell'identità di un utente con un'attività on-chain.
 wrong_answers:
-  - Il processo di assegnazione di una chiave pubblica a ogni nuova transazione onchain.
-  - La capacità di tracciare le transazioni onchain attraverso l'euristica della proprietà comune degli input.
+  - Il processo di assegnazione di una chiave pubblica a ogni nuova transazione on-chain.
+  - La capacità di tracciare le transazioni on-chain attraverso l'euristica della proprietà comune degli input.
   - Il processo mediante il quale una chiave pubblica viene derivata da una chiave privata.
 explanation: |
-  L'identificazione chiave coinvolge la possibilità di collegare un aspetto dell'identità di un utente con un'attività onchain.
+  L'identificazione della chiave coinvolge la possibilità di collegare un aspetto dell'identità di un utente con un'attività on-chain.
 reviewed: false
